argo-apps/projects/infrastructure/kong/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kong
  labels:
    kuma.io/sidecar-injection: enabled
